# bugu

./: .gitignore  .gitmodules  README.md  build.zig
.agents/skills/architecture-task-breakdown/: SKILL.md
.agents/skills/autoresearch-everything/: SKILL.md
.agents/skills/autoresearch-everything/agents/: openai.yaml
.agents/skills/autoresearch-everything/references/: program-design.md
.agents/skills/autoresearch-everything/scripts/: bootstrap_autoresearch.py
.agents/skills/codex-task-orchestrator/: SKILL.md
.agents/skills/codex-task-orchestrator/agents/: openai.yaml
.agents/skills/codex-task-orchestrator/assets/dashboard/: app.js  index.html  styles.css
.agents/skills/codex-task-orchestrator/references/: config-and-state.md
.agents/skills/codex-task-orchestrator/scripts/: orchestrate.mjs  serve-dashboard.mjs  smoke-test.mjs  validate-skill.mjs
.specstory/: .project.json
docs/: product-readiness-roadmap.md
docs/design/: acoustic-scene.md  arch_sme.md  audio-engine-design.md  audio-runtime-contract.md  audio-zig-api.md  gpu-acoustic-propagation.md  runtime-embedding-v1.md
docs/research/: 1.md  audio-backend-decoder-codec.md  kcd.md  kcd.sme.md
docs/tasks/: T001-backend-decoder-codec-research.md  T002-realtime-runtime-contract.md  T003-zig-api-module-boundaries.md  T004-zig-p0-backend.md  T005-mixer-voice-bus-core.md  T006-asset-decode-bank-mvp.md  T007-event-parameter-runtime.md  T008-spatial-baseline.md  T009-acoustic-scene-voxel-materials.md  T010-cpu-acoustic-propagation-mvp.md  T011-acoustic-response-mixer-mapping.md  T012-validation-profile-debug.md  T013-gpu-propagation-design-spike.md  T014-runtime-acoustic-effects.md  T015-event-driven-acoustic-runtime.md  T016-effect-bus-abstraction.md  T017-validation-wrapper.md  T018-gpu-spike-scene-coverage.md  T019-acoustic-ray-visualizer.md  asetup.md  task-review-2026-07-07.md  tasks.md
docs/tasks_sme/: setup.md  task-001-sme-contract-module-seams.md  task-002-absolute-frame-scheduler.md  task-003-versioned-music-bank.md  task-004-trace-telemetry-replay.md  task-005-multichannel-voice-groups.md  task-006-virtual-voice-budgets.md  task-007-tempo-map-clock.md  task-008-logic-director-selectors.md  task-009-cue-fill-transition-planner.md  task-010-ogg-opus-adapter.md  task-011-streaming-prefetch-seek.md  task-012-layer-reorchestration.md  task-013-bus-dag-sidechain.md  task-014-music-runtime-integration.md  task-015-stinger-duck-acoustic.md  task-016-hot-reload-rollback.md  task-017-headless-authoring-cli.md  task-018-gpu-authoring-app.md  task-019-runtime-visual-debugger.md  task-020-complete-sme-demo.md  task-021-full-validation-replay-ci.md  task-022-realtime-device-stress.md  task-023-packaging-migration-docs.md  task-024-v1-product-qualification.md
docs/validation/: acoustic-ray-visualizer-report.txt  acoustic-t010-response-snapshot.json  acoustic-t011-mapping-snapshot.json  acoustic-t014-effects-snapshot.txt  acoustic-t015-event-runtime-snapshot.txt  acoustic-t016-effect-bus-snapshot.txt  audio-validation-plan.md  gpu-acoustic-capability-probe.txt  gpu-acoustic-spike-report.txt  gpu-acoustic-spike-t018-report.txt  gpu-rhi-compute-run.txt  t012-validation-report-sample.txt  t017-validation-wrapper-snapshot.txt
examples/: acoustic_demo.zig  acoustic_effects_demo.zig  acoustic_event_demo.zig  acoustic_mapping_demo.zig  asset_demo.zig  effect_bus_demo.zig  event_demo.zig  runtime_embedding.zig  spatial_demo.zig  tone_demo.zig  validation_report.zig
scripts/: probe_gpu_acoustic_capabilities.ps1
src/: bugu_audio.zig
src/acoustic/: acoustic.zig  gpu_external.cpp  gpu_external.h  gpu_production.zig  production.zig
src/assets/: bank.zig
src/core/: engine.zig
src/device/: device.zig
src/events/: runtime.zig
src/mixer/: mixer.zig  tone_renderer.zig
src/runtime/: runtime.zig
src/spatial/: spatial.zig
third_party_adapters/gpu/: gpu_adapter.zig  gpu_viz_api.h
tools/: run_validation.ps1
tools/acoustic_visualizer/: CMakeLists.txt  acoustic_draw.slang  acoustic_trace.slang  audio_bridge.zig  gpu_app.zig  main.c  main.zig  main_shim.c  render_cpu.zig  scene.zig
tools/gpu_acoustic_spike/: CMakeLists.txt  gpu_acoustic.slang  main.c
